@@ -71,7 +71,7 @@
       long been strongly discouraged in \sQuote{Writing R Extensions}.)
     }
   }
-      
+
   \subsection{BUG FIXES}{
     \itemize{
       \item On Windows, GUI package installation via \code{menuInstallPkgs()}
@@ -98,6 +98,10 @@
 
       \item Correct messaging in C++ pragma checks in \pkg{tools} code for
       \command{R CMD check}, fixing \PR{17566} thanks to Xavier Robin.
+
+      \item{print()}ing and auto-printing no longer differs for
+      \code{function}s with a user defined \code{print.function}, thanks to
+      Bill Dunlap's report.
     }
   }
 }
